apps/workloads/media/plex/redirect-web.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: plex-redirect-web
spec:
  redirectRegex:
    regex: "^https?://([^/]+)/?$"
    replacement: "https://${1}/web/index.html"
    permanent: false
