apps/workloads/media/plex/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex-policy
spec:
  endpointSelector:
    matchLabels:
      app: plex

  egress:
    # Rule: Allow Internet (plex -> Indexers)
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
    # Allow egress to Bazarr for webhooks
    - toServices:
        - k8sService:
            serviceName: bazarr-ui
            namespace: media
        - k8sService:
            serviceName: media-webhook-notifier
            namespace: automation
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: media-webhook-notifier
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  # Allow Ingress (Inbound)
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: sonarr
        - matchLabels:
            app: radarr
        - matchLabels:
            app: seerr
        - matchLabels:
            app: tautulli
        - matchLabels:
            app: bazarr
        - matchLabels:
            app: posterizarr
        - matchLabels:
            app: home-assistant
            k8s:io.kubernetes.pod.namespace: iot
        - matchLabels:
            app: kometa
      toPorts:
        - ports:
            - port: web-ui
              protocol: "TCP"
    # === Allow access from local networks (Direct LB Access) ===
    - fromCIDR:
        - "10.10.1.0/24"
        - "192.168.1.0/24"
        - "192.168.4.0/24"
        - "192.168.11.0/24"
        - "192.168.29.0/24"
        - "100.64.0.0/10"
      toPorts:
        - ports:
            - port: web-ui
              protocol: "TCP"
